fix ide warnings